﻿---------------------------------------------------------------------
------------------------ CONTENIDO CHANGELOG ------------------------
---------------------------------------------------------------------
Release 4.9.12
---------------------------------------------------------------------
** Bug
    * [CON-2580] - Handling special chars in frontend username

---------------------------------------------------------------------
Release 4.9.11
---------------------------------------------------------------------
** Bug
    * [CON-2010] - Missing CSS include
    * [CON-2155] - Module search does not work correctly with german umlauts
    * [CON-2264] - Delete manual teaser articles
    * [CON-2273] - Contact form of example client can not be edited in Editor tab
    * [CON-2288] - Delete template: Wrong confirmation layout
    * [CON-2289] - Missing German translation for confirmation box at CSS, JavaScript and HTML
    * [CON-2291] - No transparency for croped png images
    * [CON-2308] - Advanced article versioning: Can not select link to open published version
    * [CON-2314] - Example client: Missing background CSS definition
    * [CON-2315] - Protected area form in example client is broken
    * [CON-2317] - Wrong German translation at article versioning (Editor tab)
    * [CON-2321] - PIFA: Wrong German word at confirmation mail
    * [CON-2322] - Wrong spelling of word necessary
    * [CON-2323] - Function getEffectiveSetting may not working reliably
    * [CON-2324] - System integrity: Filesystem checks for permissions fail if folders are purged
    * [CON-2330] - Login for frontend users broken using special chars
    * [CON-2331] - No save confirmation message in TinyMCE 4 configuration form
    * [CON-2332] - Frontend user names are not escaped in group membership view
    * [CON-2335] - Group names for backend users are not escaped at backend user view